# LLM-Evaluation-with-Ragas

./: .env.sample  README.md  evals.ipynb  pyproject.toml  requirements.txt
