[project]
name = "llm-evaluation-with-ragas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community<0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "nest-asyncio>=1.6.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
]
